apps/base/java/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-dso-gke-java
  labels:
    app: java-app
    name: svc-dso-gke-java
#    app.kubernetes.io/name: dso-gke-java
spec:
  selector:
    app: java-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
